kqed_dev4/src/objects/Employment_Website__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Post__c</fullName>
        <label>Price Per Post</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Employment Website</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Web_Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OBJECT_ID</columns>
        <columns>Maximum_Budget__c</columns>
        <columns>Price_Per_Post__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employment Website Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Websites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>